-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.5.0
-
None
-
qt6: 6.5.0-1.1
qbittorrent 4.5.2-1
arch linux: 6.2.11-1
libtorrent-rasterbar: 1:2.0.8-4
mkvtoolnix-gui 75.0.0-1.1
-
-
a608a7c29 (dev), 18a8b8f3c (6.6), de6513677 (6.5)
Upgraded from QT 6.4.3 to 6.5 and white glitches happen when moving the window on QBittorrent

- relates to
-
QTBUG-122623 Active Buttons style looks like inactive
-
- Closed
-
-
QTBUG-123449 [Reg 6.4->6.5] Quick MenuItems do not appear greyed out when disabled under GTK
-
- Closed
-